apps/immich/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: apps
      namespace: gateways
      sectionName: https
  hostnames:
    - immich.home.dokocloud.net
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
